exercises/argo-rollouts/03-canary-deployment/canary/nginx-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-canary-service
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
