exercises/argo-rollouts/03-canary-deployment/canary/nginx-stable-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-stable-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: nginx-canary-rollout.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-stable-service
            port:
              number: 80
